[package]
name = "cmrdts"
version = "0.3.0"
edition = "2024"
authors = ["johvnik <cmrdts@johvnik.com>"]
description = "A collection of Commutative Replicated Data Types (CmRDTs) implemented in pure Rust."
license = "MIT"
repository = "https://github.com/johvnik/cmrdts"
readme = "README.md"
keywords = []
categories = []


[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
proptest = "1.0"
